bugfix: cropped text when too close to desc. edge

--- a/main.css
+++ b/main.css
@@ -122,6 +122,7 @@ body {
     resize: none;
     display: block;
     white-space: pre-wrap;
+    line-height: 1.15;
 
     /* regular styles */
     height: 230px;
@@ -130,6 +131,7 @@ body {
     width: 90%;
     margin: auto;
     padding: 8px;
+    padding-bottom: 0;
     overflow: hidden;
 }
 #card-container.dark .description {
